test_programs/compile_failure/assert_constant_dynamic_vector/src/main.nr
fn main(
    dynamic_one: Field, // == 1
) {
    assert_constant(&[dynamic_one]);
}
